app-1/k8s/app1-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
spec:
  rules:
    - http:
        paths:
#          - pathType: Prefix
#            path: "/foo"
#            backend:
#              service:
#                name: foo-service
#                port:
#                  number: 5678
          - pathType: Prefix
            path: "/app"
            backend:
              service:
                name: app1-service
                port:
                  number: 80
